@@ -11,7 +11,6 @@
         android:padding="4dp" >
 
         <TextView
-            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
@@ -28,7 +27,6 @@
             android:maxLines="1"
             android:paddingLeft="1dp"
             android:textColor="?android:attr/textColorPrimaryDisableOnly"
-            android:textIsSelectable="false"
             android:textSize="15sp" />
     </LinearLayout>
 
@@ -39,7 +37,6 @@
         android:padding="4dp" >
 
         <TextView
-            android:id="@+id/path"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
@@ -55,7 +52,6 @@
             android:ellipsize="end"
             android:paddingLeft="1dp"
             android:singleLine="true"
-            android:textIsSelectable="false"
             android:textSize="15sp" />
     </LinearLayout>
 
@@ -66,7 +62,6 @@
         android:padding="4dp" >
 
         <TextView
-            android:id="@+id/third_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
@@ -83,7 +78,6 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:paddingLeft="1dp"
-            android:textIsSelectable="false"
             android:textSize="15sp" />
     </LinearLayout>
 
@@ -94,7 +88,6 @@
         android:padding="4dp" >
 
         <TextView
-            android:id="@+id/fourth_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
@@ -111,7 +104,6 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:paddingLeft="1dp"
-            android:textIsSelectable="false"
             android:textSize="15sp" />
     </LinearLayout>
 
@@ -122,7 +114,6 @@
         android:padding="4dp" >
 
         <TextView
-            android:id="@+id/perm_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
@@ -139,7 +130,33 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:paddingLeft="1dp"
-            android:textIsSelectable="false"
+            android:textSize="15sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="4dp" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:gravity="left"
+            android:padding="1dp"
+            android:text="@string/md5"
+            android:textColor="@color/gray" />
+
+        <TextView
+            android:id="@+id/md5_summary"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center_vertical"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:paddingLeft="1dp"
+            android:textIsSelectable="true"
             android:textSize="15sp" />
     </LinearLayout>
 
