@@ -2,6 +2,7 @@ Changelog:
 
 v1.9.2
 get default date format from system
+added md5-sum in details - the text is clickable there
 fixed crash when the file cannot be open
 added exit button in drawer
 update roottools lib
